Fix vertical alignment of find/replace label.

--- a/styles/panels.less
+++ b/styles/panels.less
@@ -67,7 +67,9 @@ atom-panel {
 }
 
 .find-and-replace .find-meta-container {
-  margin-top:3px;
+  margin-top:4px;
   font-size:1em;
   color:@text-color-subtle;
+  line-height: 1.5;
+  top: inherit;
 }
